# simple_render_engine

./: CMakeLists.txt  README.md
include/cglm/: affine-post.h  affine-pre.h  affine.h  call.h  cglm.h  ivec2.h  ivec3.h  ivec4.h  mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x4.h  mat4.h  mat4x2.h  mat4x3.h  quat.h  struct.h  vec2.h  vec3.h  vec4.h  version.h
include/cglm/call/: ivec2.h  ivec3.h  ivec4.h  vec2.h  vec3.h  vec4.h
include/cglm/simd/: arm.h  intrin.h  wasm.h  x86.h
include/cglm/struct/: affine-post.h  affine-pre.h  affine.h  box.h  io.h  mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x4.h  mat4.h  mat4x2.h  mat4x3.h  project.h  quat.h  vec2.h  vec3.h  vec4.h
include/cglm/struct/clipspace/: ortho_lh_no.h  ortho_lh_zo.h  ortho_rh_no.h  ortho_rh_zo.h  persp_lh_no.h  persp_lh_zo.h  persp_rh_no.h  persp_rh_zo.h  project_no.h  project_zo.h  view_lh_no.h  view_lh_zo.h  view_rh_no.h  view_rh_zo.h
include/glad/: glad.h
include/sre/: hashmap.h  image.h  mem_allocation.h  postproc.h  props.h  script.h  shaders.h  sre.h  types.h
include/sre/event/: app_run.h  event.h
include/sre/game_object/: armature.h  asset.h  camera.h  cntl.h  collision.h  game_object.h  game_object_base.h  group.h  light.h  material.h  mesh.h  texture.h
include/sre/game_object/import/: importer.h
include/sre/game_object/import_export/: export.h  importer.h
include/sre/logging/: errors.h  log.h
include/sre/transform/: transform.h
lib/: libcglm.la
resources/: room_group.grp  squishy_group.grp
resources/models/: alpha_clip_test.mtl  brick_cube.mtl  bunnies.mtl  checkerboard.scol  checkerboard.smsh  checkerboard.smtl  kms.mtl  python_testing.sarm  python_testing.smsh  python_testing.smtl
resources/scenes/: scene.scn
src/: armature.c  armature.h  asset_import.c  asset_import.h  camera.c  camera.h  cntl.c  cntl.h  collision.c  collision.h  common.c  common.h  errors.c  errors.h  glad.c  hashmap.c  hashmap.h  image.c  image.h  importer.c  importer.h  light.c  light.h  main.c  material.c  material.h  mem_allocation.c  mem_allocation.h  mesh.c  mesh.h  model.c  model.h  parse_obj.c  parse_obj.h  postproc.c  postproc.h  props.c  props.h  scene.h  shaders.c  (+7 more)
src/events/: app_run.c  event.c
src/game_object/: armature.c  asset.c  camera.c  cntl.c  collision.c  game_object.c  group.c  light.c  material.c  mesh.c  texture.c
src/game_object/import/: importer.c
src/game_object/import_export/: importer.c
src/logging/: errors.c  log.c
src/shaders/: alpha_clip_fragment.glsl  fragment.glsl  postproc_frag_shdr.glsl  postproc_vert_shdr.glsl  vertex.glsl
src/transform/: transform.c
